Testing some config options

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Simon Gustavsson
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Simon's website about Simon things
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.simongustavsson.se" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
@@ -29,6 +27,19 @@ markdown: kramdown
 remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-feed
+
+locale: "en-US"
+
+author:
+  name   : "Simon Gustavsson"
+  avatar : "/assets/images/bio-photo.jpg"
+  bio    : "My awesome biography"
+  uri    : "http://www.simongustavsson.se"
+
+compress_html:
+  clippings: all
+  ignore:
+    envs: development # disable compression in dev
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
