--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ compress_html:
   ignore:
     envs: development # disable compression in dev
 
+include: ["_pages"]
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
