--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "1.0.0",
   "description": "Source code for simongustavsson.github.io",
   "main": "main.min.js",
+  "devDependencies": {
+    "chokidar-cli": "^1.2.2",
+    "elm": "^0.19.0-bugfix6",
+    "uglify-js": "^3.4.9"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "chokidar \"**/*.elm\" -c \"npm run build-elm-dev\"",
+    "build-elm-dev": "node node_modules\\elm\\bin\\elm make src\\main.elm --output build\\main.compiled.js --debug",
+    "build-elm-prod": "node node_modules\\elm\\bin\\elm make src\\main.elm --output build\\main.optimized.js --optimize",
+    "minify": "node node_modules\\uglify-js\\bin\\uglifyjs build\\main.optimized.js -o build\\main.min.js ",
+    "build-prod": "npm run build-elm-prod && npm run minify",
+    "deploy": "npm run build-prod && node src\\deploy.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SimonGustavsson/SimonGustavsson.github.io.git"
+    "url": "https://github.com/SimonGustavsson/SimonGustavsson.github.io"
   },
   "author": "simongustavsson",
   "license": "ISC",
